--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/mobile.css">
   <script src="https://kit.fontawesome.com/bb68c0ae3d.js" crossorigin="anonymous"></script>
-  <title>Prime Enterprise | Goods Supplier</title>
+  <title>Prime Enterprises | Goods Supplier</title>
 </head>
 
 <body>
@@ -31,7 +31,7 @@
    <div class="main-about">
     <div class="about-background">
       <div class="about">
-        <h1> <span>ABOUT</span> Prime Enterprise </h1>
+        <h1> <span>ABOUT</span> Prime Enterprises </h1>
         <p>We are Supplier Of General Goods & Provide Services. <br>
           We supply all kinds of products to our existing and potential customers on demand. <br>
           Our core business area is singing and execution of general contracts for supply and distribution of finished 
@@ -48,7 +48,7 @@
     <div class="footer-container">
       <div class="footer1">
         <a href="index.html"> <img src="img/Prime-Enterprise-logo-nobgname.png" alt="Prime Enterprises"> </a>
-        <p>We are online Store for your Daily General Goods. We bring your daily life needs at your doorstep
+        <p>We are online Store for your Daily General Goods. We bring your daily life needs to your doorstep
           which are far and out of reach from you.</p>
       </div>
       <div class="footer2">
@@ -70,7 +70,7 @@
       </div>
     </div>
     <div class="footer4">
-      <p>Copyrights &copy; 2020, Prime Enterprise. All Rights Reserved. </p>
+      <p>Copyrights &copy; 2020, Prime Enterprises. All Rights Reserved. </p>
     </div>
   </footer>
 
