--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/mobile.css">
   <script src="https://kit.fontawesome.com/bb68c0ae3d.js" crossorigin="anonymous"></script>
-  <title>Prime Enterprise | Goods Supplier</title>
+  <title>Prime Enterprises | Goods Supplier</title>
 </head>
 
 <body>
@@ -73,7 +73,7 @@
     <div class="footer-container">
       <div class="footer1">
         <a href="index.html"> <img src="img/Prime-Enterprise-logo-nobgname.png" alt="Prime Enterprises"> </a>
-        <p>We are online Store for your Daily General Goods. We bring your daily life needs at your doorstep
+        <p>We are online Store for your Daily General Goods. We bring your daily life needs to your doorstep
           which are far and out of reach from you.</p>
       </div>
       <div class="footer2">
@@ -95,7 +95,7 @@
       </div>
     </div>
     <div class="footer4">
-      <p>Copyrights &copy; 2020, Prime Enterprise. All Rights Reserved. </p>
+      <p>Copyrights &copy; 2020, Prime Enterprises. All Rights Reserved. </p>
     </div>
   </footer>
 
