--- a/services.html
+++ b/services.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/mobile.css">
   <script src="https://kit.fontawesome.com/bb68c0ae3d.js" crossorigin="anonymous"></script>
-  <title>Prime Enterprise | Goods Supplier</title>
+  <title>Prime Enterprises | Goods Supplier</title>
 </head>
 
 <body>
@@ -37,12 +37,12 @@
         <i class="fas fa-code-branch fa-3x"></i>
         <h1>Electronics</h1>
         <p>We deals in all types of electronics, From a normal TV to high tech computers, 
-          we supply each every tiny parts of it. </p>
+          we supply each and every tiny part of it. </p>
       </div>
       <div class="card1">
         <i class="fas fa-utensils fa-3x"></i>
         <h1>Food</h1>
-        <p>From vegetables to Ready made meals we deliver each and every type of food product 
+        <p>From vegetables to Ready made meals we deliver any type of food product 
           at your doorstep.
         </p>
       </div>
@@ -65,7 +65,7 @@
         <i class="fas fa-chart-line fa-3x"></i>
         <h1>Business Planning</h1>
         <p>We Plan for your business and manage to grow it for you in this competitive world.
-          Your visualise ideas for you which grow your business at rapid speed. </p>
+          We visualise ideas for you which grow your business at rapid speed. </p>
       </div>
       <div class="card1">
         <i class="fas fa-balance-scale-left fa-3x"></i>
@@ -89,7 +89,7 @@
     <div class="footer-container">
       <div class="footer1">
         <a href="index.html"> <img src="img/Prime-Enterprise-logo-nobgname.png" alt="Prime Enterprises"> </a>
-        <p>We are online Store for your Daily General Goods. We bring your daily life needs at your doorstep
+        <p>We are online Store for your Daily General Goods. We bring your daily life needs to your doorstep
           which are far and out of reach from you.</p>
       </div>
       <div class="footer2">
@@ -111,7 +111,7 @@
       </div>
     </div>
     <div class="footer4">
-      <p>Copyrights &copy; 2020, Prime Enterprise. All Rights Reserved. </p>
+      <p>Copyrights &copy; 2020, Prime Enterprises. All Rights Reserved. </p>
     </div>
   </footer>
   
